# grok2api

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  adult.md  config.defaults.toml  config.example.yaml  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  launch-grok2api.ps1  main.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  start-grok2api.ps1  start-with-system-ca.cmd  start.bat  test_basic.json  test_en.json  test_mcp.py  test_multiturn.json  test_required.json  test_tool_call.json
app/: main.py
backend/: README.md  go.mod
data/: config.toml
docs/: HUGGINGFACE_SPACES.md  README.en.md  design-v1.1.md  test.md
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
scripts/: PROMPT_CACHE_INJECT_PR.md  entrypoint.sh  init_storage.sh  per_file_test.py  repro_build_prompt_cache.py
test/: repro_pgsql_bypass_not_persist.sh  test_settings_persist_verify.py
tests/: test_admin_cache.py  test_admin_config.py  test_admin_features.py  test_admin_routes.py  test_admin_token_pagination.py  test_assets.py  test_auth.py  test_auth_probe.py  test_cf_refresh_scheduler.py  test_chat_metadata_config.py  test_chat_video_api.py  test_codex_tools.py  test_config_core.py  test_config_migration.py  test_files_api.py  test_grpc_web.py  test_health.py  test_image_api_helpers.py  test_image_generation_app_chat.py  test_image_models.py  test_image_output_format.py  test_image_response_format.py  test_image_share.py  test_media_cache_limits.py  test_model.py  (+19 more)
(+526 files in other folders)
