[project]
name = "grok2api"
version = "0.1.0"
description = "Grok2API - FastAPI-based Grok API proxy with token pool and load balancing"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "CPU-JIA", email = "3144424994@qq.com" }
]
license = "MIT"
keywords = ["grok", "api", "fastapi", "proxy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.9.0",
    "aiohttp-socks>=0.10.1",
    "aiomysql>=0.2.0",
    "asyncpg>=0.31.0",
    "curl-cffi>=0.13.0",
    "fastapi>=0.119.0",
    "greenlet>=3.3.1",
    "loguru>=0.7.3",
    "orjson>=3.11.4",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.21",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py313"
